# voice-agent-framework

./: .env.example  .gitignore  ARCHITECTURE_SPEC.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.ps1
.claude/: settings.json  settings.local.json
resources/prompts/identity/: v1_system.txt
resources/prompts/router/: v1_system.txt
resources/prompts/task_manager/: v1_master.txt
src/: __init__.py  main.py
src/client/: __init__.py
src/client/agents/: __init__.py  base.py  identity.py  router.py  task_agent.py
src/framework/: __init__.py
src/framework/core/: __init__.py  agent.py  context.py  exceptions.py  io_handler.py  metrics.py  observer.py  orchestrator.py  signals.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  models.py  repository.py  service.py
src/infrastructure/llm/: __init__.py  gemini_audio.py  provider.py
src/server/: __init__.py  app.py  config.py  twilio_handler.py
src/utils/: __init__.py  prompt_loader.py
tests/: __init__.py  conftest.py  test_context.py  test_database.py  test_vui_optimizations.py
